# ado-instruction-mcp-server

./: .dockerignore  .env  Dockerfile  README.md  ado_instruction_server.py  pyproject.toml  server.py  test_dependency_arrows.py
modules/: __init__.py  ado_generator.py  common_utils.py  config.py  display_utils.py  error_handling.py  file_search.py  image_processor.py  models.py  text_processor.py
tests/text/: Requirement.txt
